# resume-injection-measurement

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: README.md
examples/results/hcd/: data_skills_keywords_case_hcd_result.json  data_skills_keywords_case_scan_result.json  instruction_override_case_hcd_result.json  instruction_override_case_scan_result.json
examples/results/vda/: data_skills_keywords_case_vda_result.json  instruction_override_case_vda_result.json
src/resume_injection_measurement/: __init__.py  classify_injection_subtype.py  classify_injection_type.py  classify_profile.py  hcd_llm_verification.py  hcd_pipeline.py  hcd_rule_analysis.py  vda_detector.py
